--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+html{
+    scroll-behavior: smooth;
+}
+
 .list{
     cursor: pointer;
     position: relative;
@@ -30,3 +34,38 @@
 .main{
     background: linear-gradient(135deg, #0d1117, #0a192f, #112240);
 }
+
+
+.icons span:hover{
+    color: #38BDF8;
+}
+
+.submit-btn{
+    transition: background-color 400ms ease-in-out;
+}
+
+.submit-btn:hover{
+    background-color: #38BDF8;
+}
+
+/* Abount Section  */
+#about{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: justify;
+    padding: 4rem 1rem;
+    color: #fff;
+    min-height: 100vh;
+    line-height: 1.8;
+    background: linear-gradient(135deg, #0a192f, #112240, #0d1117);
+}
+
+#tsparticles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
