--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,13 @@ html{
     scroll-behavior: smooth;
 }
 
+header{
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 10px;
+}
+footer{
+    box-shadow: rgba(0, 0, 0, 0.4) 0px -2px 10px;
+}
+
 .list{
     cursor: pointer;
     position: relative;
@@ -126,4 +133,10 @@ html{
 /* CONTACT  */
 #contact{
     background-color: #0a192f;
+}
+
+.submit-btn:hover{
+    background-color: #00f2fe;
+    color: black;
+    box-shadow: 0px 0px 100px #00f2fe;
 }
